# slicer3-solaris

./: launch.tcl.in  slicer_variables.tcl
Applications/CLI/: CMakeLists.txt  RigidRegistration.cxx  TestGridTransformRegistration.cxx
Applications/CLI/BRAINSTools/BRAINSCommonLib/: BRAINSFitHelper.h  CMakeLists.txt
Applications/CLI/MRIBiasFieldCorrection/: MRIBiasFieldCorrection.cxx
Applications/CLI/RegisterImagesModule/MultiResApplications/: ScalingHeuristics.h
Applications/CLI/RegisterImagesModule/MultiResApplications/Testing/: DecomposedAffine3DTransformTest.cxx  EulerSimilarity3DTransformTest.cxx  (+2 more)
Applications/CLI/RobustStatisticsSegmenter/: SFLSRobustStat3DTest.cxx  SFLSRobustStat3DTestConsole.cxx  SFLSRobustStatSegmentor3DLabelMap_single.txx
Applications/CLI/SparseFieldLevelSetContour/: MeanCurvatureEnergy.cpp  MeshEnergy.cpp
Base/GUI/: vtkSlicerCacheAndDataIOManagerGUI.cxx  vtkSlicerColorDisplayWidget.cxx  vtkSlicerColorDisplayWidget.h  vtkSlicerColorEditWidget.cxx  vtkSlicerColorEditWidget.h  vtkSlicerFiducialsGUI.cxx  vtkSlicerFiducialsGUI.h  vtkSlicerMRMLSaveDataWidget.h  vtkSlicerMRMLTreeWidget.h  vtkSlicerModelDisplayWidget.cxx  vtkSlicerModelHierarchyWidget.h  vtkSlicerModuleCollapsibleFrame.h  vtkSlicerModuleGUI.h  vtkSlicerSeedWidgetClass.h  vtkSlicerSliceControllerWidget.cxx  vtkSlicerTransformEditorWidget.cxx  vtkSlicerViewControlGUI.cxx  vtkSlicerViewerInteractorStyle.h  vtkSlicerVolumeFileHeaderWidget.h
Base/GUI/Testing/: vtkSlicerComponentGUITest1.cxx  vtkSlicerModuleGUITest1.cxx
Base/Logic/: vtkImageRectangularSource.cxx
Base/Logic/Testing/: vtkDataIOManagerLogicTest1.cxx  vtkSlicerSliceLogicTest1.cxx
Libs/CudaSupport/: CMakeLists.txt
Libs/FreeSurfer/: vtkFSLookupTable.cxx  vtkFSLookupTable.h  vtkFSSurfaceAnnotationReader.h  vtkFSSurfaceLabelReader.h  vtkFSSurfaceReader.h  vtkFSSurfaceScalarReader.h  vtkFSSurfaceWFileReader.h
Libs/MRML/: vtkCacheManager.cxx  vtkMRMLClipModelsNode.h  vtkMRMLFreeSurferProceduralColorNode.cxx  vtkMRMLInteractionNode.h  vtkMRMLProceduralColorNode.cxx  vtkMRMLScalarVolumeNode.cxx  vtkMRMLVolumeNode.cxx
Libs/MRML/Testing/: vtkMRMLArrayPlotNodeTest1.cxx  vtkMRMLBSplineTransformNodeTest1.cxx  vtkMRMLCameraNodeTest1.cxx  vtkMRMLClipModelsNodeTest1.cxx  vtkMRMLColorNodeTest1.cxx  vtkMRMLColorTableNodeTest1.cxx  vtkMRMLColorTableStorageNodeTest1.cxx  vtkMRMLCrosshairNodeTest1.cxx  vtkMRMLDiffusionImageVolumeNodeTest1.cxx  vtkMRMLDiffusionTensorDisplayPropertiesNodeTest1.cxx  vtkMRMLDiffusionTensorVolumeDisplayNodeTest1.cxx  vtkMRMLDiffusionTensorVolumeNodeTest1.cxx  vtkMRMLDiffusionTensorVolumeSliceDisplayNodeTest1.cxx  vtkMRMLDiffusionWeightedVolumeDisplayNodeTest1.cxx  vtkMRMLDiffusionWeightedVolumeNodeTest1.cxx  vtkMRMLDisplayNodeTest1.cxx  vtkMRMLDisplayableNodeTest1.cxx  vtkMRMLDoubleArrayNodeTest1.cxx  vtkMRMLFiberBundleDisplayNodeTest1.cxx  vtkMRMLFiberBundleGlyphDisplayNodeTest1.cxx  vtkMRMLFiberBundleLineDisplayNodeTest1.cxx  vtkMRMLFiberBundleNodeTest1.cxx  vtkMRMLFiberBundleStorageNodeTest1.cxx  vtkMRMLFiberBundleTubeDisplayNodeTest1.cxx  vtkMRMLFiducialListNodeTest1.cxx  vtkMRMLFiducialListStorageNodeTest1.cxx  vtkMRMLFreeSurferModelOverlayStorageNodeTest1.cxx  vtkMRMLFreeSurferModelStorageNodeTest1.cxx  vtkMRMLFreeSurferProceduralColorNodeTest1.cxx  vtkMRMLGlyphVolumeDisplayPropertiesNodeTest1.cxx  vtkMRMLGlyphableVolumeDisplayNodeTest1.cxx  vtkMRMLGlyphableVolumeSliceDisplayNodeTest1.cxx  vtkMRMLGridTransformNodeTest1.cxx  vtkMRMLHierarchyNodeTest1.cxx  vtkMRMLInteractionNodeTest1.cxx  vtkMRMLLabelMapVolumeDisplayNodeTest1.cxx  vtkMRMLLayoutNodeTest1.cxx  vtkMRMLLinearTransformNodeTest1.cxx  vtkMRMLModelDisplayNodeTest1.cxx  vtkMRMLModelHierarchyNodeTest1.cxx  (+42 more)
Libs/MRMLIDImageIO/: itkMRMLIDImageIO.cxx
Libs/SlicerExecutionModel/ModuleDescriptionParser/: ModuleFactory.h
Libs/vtkITK/: itkTimeSeriesDatabase.txx  vtkITKArchetypeImageSeriesReader.h  vtkITKBSplineTransform.cxx  vtkITKLevelTracingImageFilter.cxx
Libs/vtkTeem/: vtkBSplineInterpolateImageFunction.cxx  vtkDiffusionTensorMathematics.h
Modules/: CMakeLists.txt
Modules/ChangeTracker/Filters/: vtkImageRectangularSource.cxx
Modules/ChangeTracker/Testing/: vtkChangeTrackerGUITest.cxx  vtkMRMLChangeTrackerNodeTest.cxx
Modules/CommandLineModule/: vtkCommandLineModuleLogic.cxx
Modules/EMSegment/Algorithm/: EMLocalShapeCostFunction.cxx  vtkImageEMLocalClass.cxx  vtkImageMeanIntensityNormalization.cxx
Modules/EMSegment/Graph/: vtkImageCurveRegion.cxx
Modules/EMSegment/MRML/: vtkMRMLEMSClassInteractionMatrixNode.cxx  vtkMRMLEMSTreeParametersLeafNode.cxx
Modules/EMSegment/Wizard/: vtkEMSegmentAnatomicalStructureStep.h  vtkEMSegmentParametersSetStep.h
Modules/FastMarchingSegmentation/Testing/: vtkPichonFastMarchingTest.cxx
Modules/FetchMI/: vtkFetchMIGUI.cxx
Modules/GradientAnisotropicDiffusionFilter/: vtkGradientAnisotropicDiffusionFilterGUI.cxx
Modules/Measurements/: vtkMeasurementsAngleWidget.cxx  vtkMeasurementsGUI.cxx
Modules/Measurements/Testing/: vtkMRMLMeasurementsAngleNodeTest1.cxx  vtkMRMLMeasurementsNodeTest1.cxx  vtkMRMLMeasurementsRulerNodeTest1.cxx
Modules/Meshing/BuildingBlock/: CMakeLists.txt  vtkKWMimxAssignBoundaryConditionsGroup.cxx
Modules/Meshing/Common/: vtkMimxBoundaryConditionActor.cxx
Modules/Meshing/Filter/: vtkMimxClipImageFromBox.cxx  vtkMimxRebinMaterialProperty.cxx
Modules/Meshing/Widgets/: CMakeLists.txt
Modules/NeuroNav/: vtkNeuroNavGUI.cxx  vtkNeuroNavLogic.cxx
Modules/OpenIGTLinkIF/: vtkIGTLToMRMLImage.cxx  vtkOpenIGTLinkIFLogic.cxx
Modules/PETCTFusion/: vtkPETCTFusionGUI.cxx  vtkPETCTFusionLogic.cxx
Modules/ProstateNav/newmat/: include.h  newmat9.cpp
Modules/QueryAtlas/: vtkCardManager.cxx
Modules/SlicerWelcome/: vtkSlicerWelcomeGUI.cxx
Modules/VolumeRendering1/VolumeRenderingCuda1/: CMakeLists.txt
Modules/Volumes/: vtkSlicerGradientsWidget.h  vtkSlicerMeasurementFrameWidget.h
Modules/Volumes/Logic/: vtkSlicerVolumesLogic.cxx
Modules/Volumes/Testing/: DiffusionTensorEditorTest1.cxx
Scripts/: genlib.tcl  getbuildtest.tcl
Utilities/Package/: CMakeLists.txt
(+1 files in other folders)
